# DynamicWorkflowGenerators

./: .dockerignore  .env.example  README.md  database.db  docker-compose.yml  main.py  pyproject.toml
docker/: dockerfile.agents  dockerfile.api  dockerfile.worker
planner/: agent.py  prompt.py  tools.py
planner/.adk/: session.db
server/: actions.py  agent.py  filters.py  graph.py  json_logic.py  main.py  models.py  sample.json  schemas.py  tools.py  worker.py  workflow.py
workflows/: conditional_execution.json  creation_invoice.json  examples_agentic_node.json  filter_clients.json  filter_clients_with_one_node.json  filter_projects.json  filter_users_by_email_test_ia.json
