[project]
name = "a2a-agentes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "google-adk>=1.33.0",
    "httpx>=0.28.1",
    "litellm>=1.83.14",
    "mimesis>=19.1.0",
    "sqlmodel>=0.0.38",
    "temporalio>=1.27.1",
]
